fixed double scroll bar

--- a/css/custom.css
+++ b/css/custom.css
@@ -8,29 +8,25 @@
 }
 .section-heading,
 .section-description {
-    margin-bottom: 1.2rem;
+    margin-top: 15px;
 }
 
 
 
 @media (min-width: 300px) {
     .container-fluid {
-        width: 100%;
+        max-width: 100%;
         padding-right: 5px;
         padding-left: 5px;
-        margin-right: auto;
-        margin-left: auto;
         justify-content: center !important; 
       }
 }
 
 @media (min-width: 1000px) {
     .container-fluid {
-        width: 100%;
+        max-width: 100%;
         padding-right: 15px;
         padding-left: 15px;
-        margin-right: auto;
-        margin-left: auto;
         justify-content: center !important; 
       }
 }
@@ -41,8 +37,6 @@
     display: flex;
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
-    margin-right: -15px;
-    margin-left: -15px;
   }
 
 html:not(.no-js) [data-aos^="fade"][data-aos^="fade"] {
@@ -71,9 +65,8 @@ html:not(.no-js) [data-aos^="fade"][data-aos^="fade"] {
     z-index: -1;
 }
 .hero{
-    padding: 5rem 0 0rem 0rem;
     font-family: 'Raleway', Cochin, Georgia, Times, 'Times New Roman', serif;
-    min-height: 100vh;
+    height: 100vh
 }
 .hero::before{
     content: "";
@@ -86,7 +79,7 @@ html:not(.no-js) [data-aos^="fade"][data-aos^="fade"] {
     bottom: 0px;
     left: 0px;
     z-index: -10;
-    height: 105vh;
+    max-height: 100vh;
 }
 
 canvas {
@@ -100,6 +93,7 @@ canvas {
 }
 
 .selfie{
+    margin-top: 5rem;
     max-width: 200px;
     max-height: 200px;
     display: inline;
